@@ -1,3 +1,8 @@
+2014-11-27  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/61634
+	* gcc.dg/vect/pr61634.c: New testcase.
+
 2014-11-26  David Edelsohn  <dje.gcc@gmail.com>
 
 	* g++.dg/ext/alignof2.C: xfail-run-if on AIX.
